# ContentModAPI

./: .env.example  .gitignore  COLAB_MIGRATION.md  README.md  pyproject.toml  requirements.txt
data/datasets/civil_comments/: dataset_summary.txt  processed_data.csv  raw_data.csv
data/datasets/davidson/: dataset_summary.txt  processed_data.csv
data/datasets/self_harm/: dataset_summary.txt  raw_data.csv
data/datasets/sexual_content/: dataset_summary.txt  processed_data.csv  raw_data.csv
data/datasets/spam/: dataset_summary.txt  processed_data.csv
data/datasets/tweeteval/: dataset_summary.txt  processed_data.csv
deployment/: README.md
deployment/docker/: Dockerfile  docker-compose.yml
notebooks/: colab_setup.ipynb  colab_training.ipynb  simplified_training.ipynb
scripts/: README.md
scripts/data_collection/: collect_all.py  collect_data.py  download_additional_tweeteval.py  download_civil_comments.py  download_davidson.py  download_hateval.py  download_jigsaw.py  download_self_harm.py  download_sexual_content.py  download_spam.py  download_tweeteval.py
scripts/preprocessing/: label_schema.py
scripts/training/: train_bert.py
src/muzzle/: __init__.py  main.py
src/muzzle/api/: README.md  __init__.py
src/muzzle/api/endpoints/: __init__.py  image.py  text.py
src/muzzle/core/: config.py
src/muzzle/ml/: __init__.py
tests/unit/: test_main.py
